src/main/kubernetes/openshift/pacman-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.quarkus.io/build-timestamp: 2021-07-13 - 11:45:16 +0000
  labels:
    app.kubernetes.io/name: pacman-kikd
    app.kubernetes.io/version: 1.0.0
  name: pacman-kikd
  namespace: pacman
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: pacman-kikd
      app.kubernetes.io/version: 1.0.0
  template:
    metadata:
      annotations:
        app.quarkus.io/build-timestamp: 2021-07-13 - 11:45:16 +0000
      labels:
        app.kubernetes.io/name: pacman-kikd
        app.kubernetes.io/version: 1.0.0
    spec:
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
          image: quay.io/rhdevelopers/pacman-kikd:1.0.0
          imagePullPolicy: Always
          name: pacman-kikd
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
