src/main/kubernetes/openshift/pacman-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.quarkus.io/build-timestamp: 2021-07-13 - 11:45:16 +0000
  labels:
    app.kubernetes.io/name: pacman-kikd
    app.kubernetes.io/version: 1.0.0
  name: pacman-kikd
  namespace: pacman
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app.kubernetes.io/name: pacman-kikd
    app.kubernetes.io/version: 1.0.0
