src/main/kubernetes/openshift/pacman-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: pacman-kikd
  name: pacman-kikd
  namespace: pacman
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: pacman-kikd
    weight: 100
